[project]
name = "agno-agent-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.1",
    "arxiv>=2.2.0",
    "duckduckgo-search>=8.0.2",
    "googlesearch-python>=1.3.0",
    "lxml-html-clean>=0.4.2",
    "newspaper4k>=0.9.3.1",
    "openai>=1.79.0",
    "pycountry>=24.6.1",
    "pypdf>=5.5.0",
    "sqlalchemy>=2.0.41",
    "tavily-python>=0.7.2",
    "yfinance>=0.2.61",
]
